--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,12 @@
             <version>2.1.7</version>
         </dependency>
 
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
+        </dependency>
+
 
         <!--<dependency>-->
         <!--<groupId>com.itextpdf</groupId>-->
